gcc/testsuite/g++.dg/cpp1y/auto-fn2.C
// { dg-options -std=c++1y }

auto f() { return f(); }	// { dg-error "auto" }
